[package]
name = "fastwebsockets"
description = "A fast RFC6455 WebSocket server implementation"
version = "0.10.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/denoland/fastwebsockets"

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
required-features = ["upgrade"]

[[example]]
name = "autobahn_client"
path = "examples/autobahn_client.rs"
required-features = ["upgrade"]

[[example]]
name = "tls_client"
path = "examples/tls_client.rs"
required-features = ["upgrade"]

[[example]]
name = "tls_server"
path = "examples/tls_server.rs"
required-features = ["upgrade"]

[[example]]
name = "axum"
path = "examples/axum.rs"
required-features = ["upgrade", "with_axum"]

[[example]]
name = "echo_server_split"
path = "examples/echo_server_split.rs"
required-features = ["upgrade"]

[dependencies]
tokio = { version = "1.44.1", default-features = false, features = ["io-util"] }
simdutf8 = { version = "0.1.5", optional = true }
hyper-util = { version = "0.1.10", features = ["tokio"], optional = true }
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.6.0", features = [
    "http1",
    "server",
    "client",
], optional = true }
pin-project = { version = "1.1.10", optional = true }
base64 = { version = "0.22.1", optional = true }
sha1 = { version = "0.10.6", optional = true }
utf-8 = "0.7.5"
rand = "0.9.0"
thiserror = "2.0.12"
bytes = "1.10.1"

# Axum integration
axum-core = { version = "0.5.0", optional = true }
http = { version = "1.3.1", optional = true }
async-trait = { version = "0.1.88", optional = true }
rustls-pki-types = "1.11.0"

[features]
default = ["simd", "simple"]
simd = ["simdutf8/aarch64_neon"]
simple = []
client = []
upgrade = [
    "hyper",
    "pin-project",
    "base64",
    "sha1",
    "hyper-util",
    "http-body-util",
]
unstable-split = []
# Axum integration
with_axum = ["axum-core", "http", "async-trait"]

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full", "macros"] }
tokio-rustls = "0.26.2"
rustls-pemfile = "2.2.0"
hyper-util = { version = "0.1.0", features = ["tokio"] }
http-body-util = { version = "0.1.0" }
hyper = { version = "1", features = ["http1", "server", "client"] }
assert2 = "0.3.4"
trybuild = "1.0.103"
criterion = "0.5.1"
anyhow = "1.0.97"
webpki-roots = "0.26.8"
bytes = "1.4.0"
axum = "0.8.1"

[[test]]
name = "upgrade"
path = "tests/upgrade.rs"
required-features = ["upgrade"]

[[test]]
name = "split"
path = "tests/split.rs"
required-features = ["upgrade"]

[[test]]
name = "concurrency"
path = "tests/concurrency.rs"
required-features = ["upgrade"]

[[bench]]
name = "unmask"
harness = false

# Build release with debug symbols: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.docs.rs]
features = ["upgrade", "with_axum"]
